# HTML-LaTeX-Compiler

./: .gitignore  CodeGenerator.hs  HTMLLaTeXCompiler  HTMLLaTeXCompiler.cabal  HTMLLaTeXCompiler.hs  HTMLLaTeXParser.hs  Htex.cabal  LICENSE  LaTeXHTMLParser.hs  LexicalAnalyzer.hs  Main  Main.hs  Parser.hs  README.md  SymbolTable.hs  example.tex
Backend/: CodeGenerator.hs
Frontend/: LexicalAnalyzer.hs  Parser.hs
HTML/: example.html
LaTeX/: example.tex  example2.tex
app/: Main.hs
frontend/: ICG.hs  LexicalAnalyzer.hs  Parser.hs
tests/: CodeGeneratorTest.hs  LexicalAnalyzerTest.hs  ParserTest.hs  Spec.hs  testFour.html
tests/data/: testFour.html  testOne.html  testThree.html  testTwo.html
